--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "check": "tsc --noEmit && npx prettier . --check",
     "format": "npx prettier . --write",
     "test": "tsx ./quartz/util/path.test.ts && tsx ./quartz/depgraph.test.ts",
-    "profile": "0x -D prof ./quartz/bootstrap-cli.mjs build --concurrency=1"
+    "profile": "0x -D prof ./quartz/bootstrap-cli.mjs build --concurrency=1",
+    "build": "npx quartz build",
+    "dev": "npx quartz build --serve"
   },
   "engines": {
     "npm": ">=9.3.1",
@@ -108,5 +110,8 @@
     "prettier": "^3.3.3",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
+  },
+  "resolutions": {
+    "punycode": "^2.1.1"
   }
 }
