update vercel files

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,22 @@
 {
   "cleanUrls": true,
+  "functions": {
+    "api/**/*": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  },
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600, must-revalidate"
+        }
+      ]
+    }
+  ],
   "buildCache": {
     "enabled": true,
     "patterns": ["public/**", ".quartz-cache/**"]
