--- a/package.json
+++ b/package.json
@@ -107,9 +107,11 @@
     "@types/ws": "^8.5.12",
     "@types/yargs": "^17.0.33",
     "esbuild": "^0.24.0",
+    "eslint": "^9.13.0",
     "prettier": "^3.3.3",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0"
   },
   "resolutions": {
     "punycode": "^2.1.1"
