Remove FUNDING file, update reading list with Kobo Reader insights, delete 'The Housemaid' note, and enhance jsconfig and quartz layout

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,15 +1,34 @@
 {
     "compilerOptions": {
-        "module": "ESNext",
-        "moduleResolution": "Bundler",
-        "target": "ES2020",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
+        "target": "ES2022",
         "jsx": "react",
         "allowImportingTsExtensions": true,
         "strictNullChecks": true,
-        "strictFunctionTypes": true
+        "strictFunctionTypes": true,
+        // Add these recommended options
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "*",
+                "src/*"
+            ]
+        },
+        "checkJs": true,
+        "resolveJsonModule": true,
+        "allowJs": true,
+        // Add these recommended options for better type checking and module support
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true
     },
     "exclude": [
         "node_modules",
-        "**/node_modules/*"
+        "**/node_modules/*",
+        "dist",
+        "build",
+        ".quartz"
     ]
 }
